FIX: content hiding behind header

--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -9,9 +9,8 @@
 }
 
 .mainWrapper {
-    padding-top: 80px;
+    padding-top: 90px; //height of the header
     flex: 2;
-    /* padding: 0 2rem; */
 }
 
 .logo {
